--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="pCancion centrar arvo-regular">Tensión, urgencia y el peso de un conflicto que define una era. Este tema es la crónica de una rivalidad legendaria y la desesperada lucha por la supervivencia de la banda. Con su ritmo pulsante y sus coros solemnes, la canción crea una atmósfera de peligro inminente y confrontación inevitable. Es el sonido de la lealtad puesta a prueba, de la cacería y de ser cazado, marcando los momentos de mayor dramatismo y acción de la saga.</p>
         </section>
         <section class="sectionVideojuego">
-            <h3 id="escenas" class="centrar arvo-bold">Las escenas que la música hizo inovidables</h3>
+            <h3 id="escenas" class="centrar arvo-bold">Las escenas que la música hizo inolvidables</h3>
             <div class="divFotos">
                 <figure>
                     <img class="bordeRedondo" src="img/Imagen1.jpg" alt="">
