Cambios en el padding y fuentes de las opciones del menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <img class ="imgButton"src="img/menu.png" alt="">
                 </button>
                     <ul id="absoluta">
-                        <li><a href="#home">Inicio</a></li>
-                        <li><a href="#canciones">Canciones</a></li>                                         
-                        <li><a href="#escenas">Escenas</a></li>
-                        <li><a href="#orquesta">Orquesta</a></li> 
+                        <li><a href="#home" class="arvo-bold">INICIO</a></li>
+                        <li><a href="#canciones" class="arvo-bold">CANCIONES</a></li>                                         
+                        <li><a href="#escenas" class="arvo-bold">ESCENAS</a></li>
+                        <li><a href="#orquesta" class="arvo-bold">ORQUESTA</a></li> 
                     </ul>
                 </li>
             </ul>
