Se agregan cambios en el footer

--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
         </section>
         
     </main>
-    <footer class="arvo-regular">
-        <a href="#nav">Volver al inicio</a>
-        <p class="pFooter">Lucas Rafael Peña Gutierrez - lucas.penag@davinci.edu.ar - 2025</p>
+    <footer class="arvo-regular centrar">
+        <div id="divFooter" class="centrar">          
+            <p class="pFooter">Lucas Rafael Peña Gutierrez - 2025</p>
+            <a id="aFooter" href="#nav">Volver al inicio</a>
+        </div>
+        
     </footer>
 </body>
 </html>
